fix align subtitle

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@
 
 .subtitle {
   max-width: 688px;
-  margin: 15px 0 0;
+  margin: 15px auto 0;
   text-align: center;
 }
 
